Refactor forms.